[package]
edition = "2021"
name = "bloom"
version = "0.3.0"

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive", "env"] }
daemonize = "0.4.1"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serfig = "0.0.2"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
