[package]
edition = "2021"
name = "blooming"
version = "0.3.1"
authors = ["RinChanNOW <rin_chan_now@outlook.com>"]
description = "BT/PT 站订阅更新通知器。"
homepage = "https://github.com/RinChanNOWWW/blooming"
documentation = "https://github.com/RinChanNOWWW/blooming"
repository = "https://github.com/RinChanNOWWW/blooming"
readme = "README.md"
license-file = "LICENSE"
keywords = ["rss", "cronjob", "mikanproject", "pt", "bt"]
categories = ["command-line-utilities"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive", "env"] }
daemonize = "0.4.1"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.145", features = ["derive"] }
serfig = "0.0.2"
yaserde = "0.8.0"
yaserde_derive = "0.8.0"
