[package]
edition = "2021"
name = "blooming"
version = "0.4.1"
authors = ["RinChanNOW <rin_chan_now@outlook.com>"]
description = "BT/PT 站订阅更新通知器。"
homepage = "https://github.com/RinChanNOWWW/blooming"
documentation = "https://github.com/RinChanNOWWW/blooming"
repository = "https://github.com/RinChanNOWWW/blooming"
readme = "README.md"
license-file = "LICENSE"
keywords = ["rss", "cronjob", "mikanproject", "pt", "bt"]
categories = ["command-line-utilities"]

[lib]
doctest = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
backon = "0.4"
chrono = "0.4.22"
clap = { version = "3.2.22", features = ["derive", "env"] }
daemonize = "0.5.0"
futures = "0.3.28"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
rss = { version = "2.0" }
sensible-env-logger = { version = "0.3", features = ["local-time"] }
serde = { version = "1.0.145", features = ["derive"] }
serfig = "0.0.2"
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }

[patch.crates-io]
rss = { git = "https://github.com/RinChanNOWWW/rss", branch = "patch-mikan" }
